2026-02-02T01:17:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21574019662 # 865
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-16 2026-01-17] / []

2026-01-31T01:10:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21536105809 # 863
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15] / []

2026-01-30T01:13:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21500764809 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-14] / []

2026-01-29T01:13:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21461767199 # 861